--- a/src/styles/config/_variables.scss
+++ b/src/styles/config/_variables.scss
@@ -1,6 +1,6 @@
-$font-primary: 'Poppins', sans-serif;
-$font-secondary: 'Roboto', sans-serif;
-$font-tertiary: 'Montserrat', sans-serif;
+$font-primary: "Poppins", sans-serif;
+$font-secondary: "Roboto", sans-serif;
+$font-tertiary: "Montserrat", sans-serif;
 
 /* color */
 $color-primary-complementary: complement($color-primary);
@@ -80,13 +80,19 @@ $z-index-sidebar: 1040;
 $z-index-modal-backdrop: 1050;
 
 /* Shadows */
-$shadow-medium: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-$shadow-heavy: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+$shadow-medium:
+  0 3px 6px rgba(0, 0, 0, 0.16),
+  0 3px 6px rgba(0, 0, 0, 0.23);
+$shadow-heavy:
+  0 10px 20px rgba(0, 0, 0, 0.19),
+  0 6px 6px rgba(0, 0, 0, 0.23);
 
 $shadow-none: none;
 $shadow-inner: inset 0 2px 4px 0 rgba(0, 0, 0, 0.06);
 
-$shadow-light: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+$shadow-light:
+  0 1px 3px rgba(0, 0, 0, 0.12),
+  0 1px 2px rgba(0, 0, 0, 0.24);
 $shadow-xlight: 0 1px 2px rgba(0, 0, 0, 0.05);
 $shadow-dark: 0 5px 15px rgba(0, 0, 0, 0.25);
 $shadow-xdark: 0 10px 25px rgba(0, 0, 0, 0.35);
