--- a/pixelinsight.config.scss
+++ b/pixelinsight.config.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 // Font sizes 8 - 96px
 $f-size-1: 0.8rem; // 8px
@@ -15,8 +15,8 @@ $f-size-11: 6.4rem; // 64px
 $f-size-12: 7rem; // 70px
 $f-size-huge: 9.6rem; // 96px
 
-$f-family-heading: "Nunito", sans-serif;
-$f-family-body: "PT Sans", sans-serif;
+$f-family-heading: "Work Sans", sans-serif;
+$f-family-body: "Merriweather", sans-serif;
 
 /* Breakpoints */
 $breakpoint-xs: 350px;
