--- a/src/styles/_starter.scss
+++ b/src/styles/_starter.scss
@@ -5,10 +5,11 @@
 }
 html {
   font-size: 62.5%;
-  box-sizing: border-box;
+  //box-sizing: border-box;
 }
 body {
-  font-family: $f-family-body;
+  font-family: "Work Sans", sans-serif;
+  background-color: #1d1f1f;
 }
 
 h1,
@@ -17,35 +18,13 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: $f-family-heading;
+  font-family: "Work Sans", sans-serif;
   color: $c-text;
-  font-family: Nunito;
-  font-style: normal;
-  text-align: center;
-  font-weight: 700;
-  line-height: normal;
-}
-h1 {
-  font-size: $f-size-8;
-}
-h2 {
-  font-size: $f-size-5;
-}
-h3 {
-  font-size: $f-size-4;
-}
-h4 {
-  font-size: $f-size-3;
 }
 
 p {
   color: $c-text;
-  text-align: center;
-  font-family: PT Sans;
-  font-size: $f-size-3;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
+  font-family: "Merriweather", sans-serif;
 }
 
 ul {
