--- a/src/shared/_Header.scss
+++ b/src/shared/_Header.scss
@@ -38,8 +38,9 @@
       display: block;
       ul {
         @include flex(row, flex-end, center);
-        font-size: $f-size-4;
+        font-size: 2.4rem;
         li {
+          letter-spacing: -0.192rem;
           margin-left: 2.8rem;
           background: linear-gradient(
             180deg,
