--- a/src/components/home/_Hero.scss
+++ b/src/components/home/_Hero.scss
@@ -1,6 +1,8 @@
 .hero {
   @include flex(column, center, center);
-
+  &__large {
+    display: none;
+  }
   &__slogan {
     padding-top: 4rem;
 
@@ -39,5 +41,27 @@
     border-radius: 8px;
     font-size: 2.4rem;
     font-weight: 400;
+  }
+}
+@include media-breakpoint-up(lg) {
+  .hero-wrapper {
+    @include flex(row, center, center);
+  }
+  .hero {
+    &__large {
+      display: inline-block;
+      padding-left: 12.5rem;
+    }
+  }
+}
+@include media-breakpoint-up(xl) {
+  .hero-wrapper {
+    @include flex(row, center, center);
+  }
+  .hero {
+    &__large {
+      display: inline-block;
+      padding-left: 25rem;
+    }
   }
 }
