--- a/src/index.scss
+++ b/src/index.scss
@@ -42,3 +42,4 @@
 @import "components/home/_WhatWeDoCards.scss";
 @import "components/home/_Scrollbar.scss";
 @import "components/home/_OurMission.scss";
+@import "components/home/_TechExpertise.scss";
