--- a/src/components/home/_OurMission.scss
+++ b/src/components/home/_OurMission.scss
@@ -20,177 +20,71 @@
       padding-bottom: 1.6rem;
     }
   }
-
-  &__discover {
-    margin-top: 3.6rem;
-    height: 240px;
-    padding-top: 3.7rem;
+  h2 {
+    font-size: 2.8rem;
+    padding-bottom: 1.2rem;
+  }
+  h4 {
+    font-size: 1.2rem;
+    max-width: 208px;
+    font-weight: 400;
+    @include padding-x(1.6rem);
+  }
+  .main-wrapper {
+    height: 210px;
     position: relative;
-    h2 {
-      font-size: 2.8rem;
-      padding-bottom: 1.2rem;
-    }
-    h4 {
-      font-size: 1.2rem;
-      max-width: 208px;
-      font-weight: 400;
-      @include padding-x(1.6rem);
-    }
     &--color {
       position: absolute;
+      width: 95%;
+      height: 150px;
+      border-radius: 16px;
+      z-index: 1;
+    }
+    &--content {
+      border-radius: 16px;
+      @include flex(column, center, center);
+      height: 150px;
+      position: relative;
+      background-color: #1d1f1f;
+      z-index: 2;
+      box-shadow: 0 0 10px 0 rgba(8, 7, 7, 0.8);
+    }
+  }
+  &__discover {
+    margin-top: 3.4rem;
+    padding-top: 3.7rem;
+    &--color {
       background-color: #ef913c;
       left: 22px;
       top: 28px;
-      width: 95%;
-      z-index: 1;
-      height: 150px;
-      border-radius: 16px;
-    }
-    &--content {
-      border-radius: 16px;
-      @include flex(column, center, center);
-      height: 150px;
-      position: relative;
-      background-color: #1d1f1f;
-      z-index: 2;
-      box-shadow: 0 0 10px 0 rgba(8, 7, 7, 0.8);
     }
   }
   &__design {
-    // margin-top: rem;
-    height: 240px;
-    // padding-top: 1rem;
-    position: relative;
-    h2 {
-      font-size: 2.8rem;
-      padding-bottom: 1.2rem;
-    }
-    h4 {
-      font-size: 1.2rem;
-      max-width: 208px;
-      font-weight: 400;
-      @include padding-x(1.6rem);
-    }
     &--color {
-      position: absolute;
       background-color: #f2446e;
       left: 22px;
       top: -8px;
-      width: 95%;
-      z-index: 1;
-      height: 150px;
-      border-radius: 16px;
-    }
-    &--content {
-      border-radius: 16px;
-      @include flex(column, center, center);
-      height: 150px;
-      position: relative;
-      background-color: #1d1f1f;
-      z-index: 2;
-      box-shadow: 0 0 10px 0 rgba(8, 7, 7, 0.8);
     }
   }
   &__build {
-    height: 240px;
-
-    position: relative;
-    h2 {
-      font-size: 2.8rem;
-      padding-bottom: 1.2rem;
-    }
-    h4 {
-      font-size: 1.2rem;
-      max-width: 208px;
-      font-weight: 400;
-      @include padding-x(1.6rem);
-    }
     &--color {
-      position: absolute;
       background-color: #28233b;
       left: 22px;
       top: -8px;
-      width: 95%;
-      z-index: 1;
-      height: 150px;
-      border-radius: 16px;
-    }
-    &--content {
-      border-radius: 16px;
-      @include flex(column, center, center);
-      height: 150px;
-      position: relative;
-      background-color: #1d1f1f;
-      z-index: 2;
-      box-shadow: 0 0 10px 0 rgba(8, 7, 7, 0.8);
     }
   }
   &__launch {
-    height: 240px;
-
-    position: relative;
-    h2 {
-      font-size: 2.8rem;
-      padding-bottom: 1.2rem;
-    }
-    h4 {
-      font-size: 1.2rem;
-      max-width: 208px;
-      font-weight: 400;
-      @include padding-x(1.6rem);
-    }
     &--color {
-      position: absolute;
       background-color: #ef913c;
       left: 22px;
       top: -8px;
-      width: 95%;
-      z-index: 1;
-      height: 150px;
-      border-radius: 16px;
-    }
-    &--content {
-      border-radius: 16px;
-      @include flex(column, center, center);
-      height: 150px;
-      position: relative;
-      background-color: #1d1f1f;
-      z-index: 2;
-      box-shadow: 0 0 10px 0 rgba(8, 7, 7, 0.8);
     }
   }
   &__enjoy {
-    height: 240px;
-
-    position: relative;
-    h2 {
-      font-size: 2.8rem;
-      padding-bottom: 1.2rem;
-    }
-    h4 {
-      font-size: 1.2rem;
-      max-width: 208px;
-      font-weight: 400;
-      @include padding-x(1.6rem);
-    }
     &--color {
-      position: absolute;
       background-color: #f2446e;
       left: 22px;
       top: -8px;
-      width: 95%;
-      z-index: 1;
-      height: 150px;
-      border-radius: 16px;
-    }
-    &--content {
-      border-radius: 16px;
-      @include flex(column, center, center);
-      height: 150px;
-      position: relative;
-      background-color: #1d1f1f;
-      z-index: 2;
-      box-shadow: 0 0 10px 0 rgba(8, 7, 7, 0.8);
     }
   }
 }
