--- a/src/components/home/_Scrollbar.scss
+++ b/src/components/home/_Scrollbar.scss
@@ -1,8 +1,17 @@
 .scrollbar {
+  padding-top: 24.2rem;
   @include flex(column, center, center);
   position: absolute;
   left: 10px;
-  bottom: -199%;
+  // top: -10px;
+  .dot {
+    @include size(8px, 8px);
+    border-radius: 50%;
+    background-color: #1d1f1f;
+    margin-bottom: 4px;
+    border: 1px solid #6b6767;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  }
   .hex {
     @include size(24px, 24px);
     padding-bottom: 4px;
@@ -10,10 +19,8 @@
   }
   @media screen and (min-width: 475px) {
     left: 75px;
-    bottom: -199%;
   }
   @media screen and (min-width: 650px) {
     left: 150px;
-    bottom: -199%;
   }
 }
