--- a/src/index.scss
+++ b/src/index.scss
@@ -36,6 +36,9 @@
 @import "pages/_Pages.scss";
 
 @import "shared/_Header.scss";
+@import "shared/_ContactForm.scss";
+@import "shared/_GetAQuote.scss";
+@import "shared/_Footer.scss";
 
 @import "components/home/_Hero.scss";
 @import "components/home/_WhatWeDo.scss";
@@ -43,3 +46,5 @@
 @import "components/home/_Scrollbar.scss";
 @import "components/home/_OurMission.scss";
 @import "components/home/_TechExpertise.scss";
+@import "components/home/_FAQ.scss";
+@import "components/home/_WhyChoosePixel.scss";
