--- a/src/components/home/_OurMission.scss
+++ b/src/components/home/_OurMission.scss
@@ -3,21 +3,19 @@
   padding-bottom: 3.6rem;
   &__header-card {
     @include flex(column, center, center);
+    width: 280px;
     background-color: #1d1f1f;
-    border-radius: 8px;
+    border-radius: 1.6rem;
+    padding: 1.6rem;
     box-shadow: 0px 4px 40px 0px rgba(255, 255, 255, 0.8);
     h2 {
-      padding-top: 1.6rem;
       font-size: 2.8rem;
     }
     h4 {
       font-weight: 400;
       letter-spacing: -0.08rem;
       font-size: 16px;
-      max-width: 256px;
-      @include padding-x(1.6rem);
-      padding-top: 2rem;
-      padding-bottom: 1.6rem;
+      padding-top: 1.8rem;
     }
   }
   h2 {
