--- a/src/shared/_ContactForm.scss
+++ b/src/shared/_ContactForm.scss
@@ -3,6 +3,7 @@
 
   form {
     @include flex(column, flex-start, flex-start);
+    color: #f5f5f5;
 
     h2 {
       font-size: 2.8rem;
@@ -12,24 +13,47 @@
     input,
     textarea {
       margin-bottom: 2rem;
-      width: 280px;
       background-color: #111111;
       border: none;
-      color: #ffffff;
-      border-bottom: 1px solid #ffffff;
+      border-bottom: 1px solid #f5f5f5;
+      width: 280px;
 
       &::placeholder {
-        color: #ffffff;
+        color: #f5f5f5;
       }
+    }
+    .checkbox {
+      width: 25px;
     }
     button {
       background-color: #111111;
-      color: #ffffff;
       border: 1.5px solid #f2446e;
       padding: 0.8rem 1.6rem;
       margin: auto;
       @include margin-y(2rem);
       @include size(230px, 44px);
+    }
+  }
+}
+
+@include media-breakpoint-up(md) {
+  .contact-form {
+    form {
+      input,
+      textarea {
+        width: 480px;
+      }
+    }
+  }
+}
+
+@include media-breakpoint-up(lg) {
+  .contact-form {
+    form {
+      input,
+      textarea {
+        width: 580px;
+      }
     }
   }
 }
