--- a/src/pages/_Pages.scss
+++ b/src/pages/_Pages.scss
@@ -12,6 +12,38 @@
     margin-bottom: 3.6rem;
   }
 }
+
+.contact {
+  &__top-wrapper {
+    @include flex(row, center, center);
+    margin-bottom: 3.2rem;
+    h1 {
+      font-size: 2.4rem;
+      padding-top: 3.2rem;
+      max-width: 200px;
+      text-align: center;
+      margin-right: 0.8rem;
+    }
+    img {
+      @include size(68px, 68px);
+    }
+  }
+  &__phone-desktop {
+    display: none;
+  }
+
+  &__text {
+    font-size: 1.6rem;
+    line-height: 2.4rem;
+    margin-bottom: 3.2rem;
+    max-width: 286px;
+    text-align: center;
+    margin: auto;
+    padding-top: 4.8rem;
+    margin-bottom: 6rem;
+  }
+}
+
 @include media-breakpoint-up(md) {
   .home {
     .sub-hero-divider {
