contact med and up
Co-authored-by: Arno Luyckx <BlocksOnChainCode@users.noreply.github.com>

--- a/src/pages/_Pages.scss
+++ b/src/pages/_Pages.scss
@@ -50,6 +50,37 @@
       width: 644px;
     }
   }
+
+  .contact {
+    &__top-wrapper {
+      h1 {
+        font-size: 3.2rem;
+        font-weight: 600;
+        letter-spacing: -0.256rem;
+        max-width: 350px;
+      }
+    }
+
+    input,
+    textarea {
+      max-width: 300px;
+    }
+    &__phone-mobile {
+      display: none;
+    }
+    &__phone-desktop {
+      display: inline-block;
+      margin-left: 1.6rem;
+      padding: 5.2rem;
+    }
+    &__form-wrapper {
+      @include flex(row, center, center);
+      margin-bottom: 3.2rem;
+    }
+    &__text {
+      max-width: 520px;
+    }
+  }
 }
 @include media-breakpoint-up(lg) {
   .home {
