--- a/src/components/home/_Scrollbar.scss
+++ b/src/components/home/_Scrollbar.scss
@@ -1,5 +1,5 @@
 .scrollbar {
-  padding-top: 24.2rem;
+  //padding-top: 24.2rem;
   @include flex(column, center, center);
   position: absolute;
   left: 10px;
