--- a/src/pages/_Pages.scss
+++ b/src/pages/_Pages.scss
@@ -44,6 +44,116 @@
   }
 }
 
+.about {
+  @include flex(column, center, center);
+  img {
+    border-radius: 50%;
+    @include size(80px, 80px);
+  }
+  blockquote {
+    padding-top: 1.2rem;
+    width: 290px;
+    font-weight: 400;
+  }
+  h1 {
+    font-size: 4rem;
+    text-align: center;
+  }
+  &__about {
+    h2 {
+      text-align: center;
+      text-decoration: underline;
+      font-size: 1.6rem;
+      padding-bottom: 0.8rem;
+    }
+    p {
+      max-width: 200px;
+    }
+    margin-bottom: 2.4rem;
+  }
+
+  .dark {
+    background-color: #28233b;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
+    @include padding-x(1.6rem);
+    h2 {
+      padding-top: 1.6rem;
+      text-decoration: underline;
+      padding-bottom: 0.8rem;
+    }
+    p {
+      padding-bottom: 1.6rem;
+    }
+    margin-bottom: 2.4rem;
+  }
+  .light {
+    background: linear-gradient(135deg, #ef913c 0%, #f2446e 42.72%);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
+    @include padding-x(1.6rem);
+    h2 {
+      padding-top: 1.6rem;
+      text-decoration: underline;
+      padding-bottom: 0.8rem;
+    }
+    p {
+      padding-bottom: 1.6rem;
+    }
+    margin-bottom: 2.4rem;
+  }
+  &__mission {
+    p {
+      max-width: 200px;
+      font-size: 1.2rem;
+    }
+  }
+  &__vision {
+    p {
+      max-width: 200px;
+      font-size: 1.2rem;
+    }
+  }
+
+  &__team {
+    P {
+      font-size: 1.2rem;
+    }
+    max-width: 288px;
+    border-radius: 16px;
+    margin-bottom: 2.4rem;
+    background-color: #1d1f1f;
+    padding: 1.2rem;
+    @include margin-x(1.6rem);
+    &--wrapper {
+      @include flex(row, space-between, center);
+      h3 {
+        font-size: 3.6rem;
+        font-weight: 400;
+      }
+      padding-bottom: 0.8rem;
+    }
+    &--emily {
+      border: 3px solid #f2446e;
+    }
+    &--arno {
+      border: 3px solid #0071b9;
+    }
+  }
+  &__story {
+    P {
+      font-size: 1.2rem;
+    }
+    @include margin-x(1.6rem);
+  }
+  &__conclusion {
+    p {
+      font-size: 1.2rem;
+    }
+    @include margin-x(1.6rem);
+  }
+}
+
 @include media-breakpoint-up(md) {
   .home {
     .sub-hero-divider {
