--- a/src/components/home/_FAQ.scss
+++ b/src/components/home/_FAQ.scss
@@ -1,7 +1,8 @@
 .accordion-text {
+  font-family: "Work Sans", sans-serif;
   font-size: 1.6rem;
   letter-spacing: -0.092rem;
-  font-weight: 400;
+  font-weight: 600;
 }
 .accordion-item {
   width: 290px;
@@ -21,8 +22,9 @@
 }
 .accordion-title {
   @include flex(row, flex-start, center);
-  border-radius: 16px;
-  padding: 0.5rem 2.4rem;
+  border-radius: 1.6rem;
+  padding: 0.8rem 1.6rem;
+
   img {
     margin-right: 1.6rem;
   }
@@ -34,11 +36,15 @@
   &__title {
     max-width: 280px;
     font-size: 3.2rem;
+    font-weight: 600;
   }
   &__content {
     max-width: 220px;
-    padding-left: 2rem;
-    padding-top: 1.6rem;
+    font-size: 1.6rem;
+    font-weight: 300;
+    text-align: center;
+    margin: auto;
+    padding: 1.6rem 0 0 2rem;
     @include media-breakpoint-up(sm) {
       max-width: 400px;
     }
