--- a/src/components/home/_OurMission.scss
+++ b/src/components/home/_OurMission.scss
@@ -1,26 +1,28 @@
+.our-mission-card {
+  @include flex(column, center, center);
+  margin: auto;
+  padding: 1.6rem;
+  width: 280px;
+  background-color: #1d1f1f;
+  border-radius: 1.6rem;
+  box-shadow: 0px 4px 40px 0px rgba(255, 255, 255, 0.8);
+  h2 {
+    font-size: 2.8rem;
+    padding-bottom: 2rem;
+  }
+  p {
+    font-weight: 400;
+    letter-spacing: -0.08rem;
+    font-size: 1.6rem;
+  }
+}
+
 .our-mission {
   @include flex(column, center, center);
   padding-bottom: 3.6rem;
-  &__header-card {
-    @include flex(column, center, center);
-    width: 280px;
-    background-color: #1d1f1f;
-    border-radius: 1.6rem;
-    padding: 1.6rem;
-    box-shadow: 0px 4px 40px 0px rgba(255, 255, 255, 0.8);
-    h2 {
-      font-size: 2.8rem;
-    }
-    p {
-      font-weight: 400;
-      letter-spacing: -0.08rem;
-      font-size: 16px;
-      padding-top: 1.8rem;
-    }
-  }
   h2 {
     font-size: 2.8rem;
-    padding-bottom: 1.6rem;
+    padding-bottom: 1.2rem;
   }
   p {
     font-size: 1.2rem;
@@ -28,23 +30,24 @@
     font-weight: 400;
     @include padding-x(1.6rem);
   }
+
   .main-wrapper {
     height: 210px;
     position: relative;
     &--color {
       position: absolute;
+      z-index: 1;
       width: 95%;
       height: 150px;
-      border-radius: 16px;
-      z-index: 1;
+      border-radius: 1.6rem;
     }
     &--content {
-      border-radius: 16px;
       @include flex(column, center, center);
-      height: 150px;
       position: relative;
-      background-color: #1d1f1f;
       z-index: 2;
+      border-radius: 16px;
+      height: 150px;
+      background-color: #1d1f1f;
       box-shadow: 0 0 10px 0 rgba(8, 7, 7, 0.8);
     }
   }
@@ -94,15 +97,18 @@
       &--content {
         @include padding-y(2.4rem);
       }
+      &--color {
+        height: 180px;
+      }
     }
     h2 {
       font-size: 3.6rem;
     }
     p {
-      font-size: 1.2rem;
+      font-size: 1.6rem;
     }
     &__discover {
-      width: 275px;
+      width: 300px;
       align-self: flex-start;
     }
     &__design {
