--- a/src/components/home/_WhatWeDoCards.scss
+++ b/src/components/home/_WhatWeDoCards.scss
@@ -22,8 +22,7 @@
     h2 {
       font-size: 2.4rem;
       letter-spacing: -0.192rem;
-      padding-bottom: 2.4rem;
-      padding-top: 1.6rem;
+      padding: 1.6rem 0 2.4rem 0;
     }
     p {
       font-size: 1.2rem;
