--- a/src/pages/_Pages.scss
+++ b/src/pages/_Pages.scss
@@ -12,7 +12,28 @@
     margin-bottom: 3.6rem;
   }
 }
-
+.quote-success {
+  // height: 80vh;
+  padding-top: 12.8rem;
+  @include flex(column, center, center);
+  h1 {
+    text-align: center;
+    font-size: 3.6rem;
+    padding-bottom: 2.4rem;
+    width: 280px;
+    font-weight: 400;
+  }
+  button {
+    @include button(#f2446e);
+    padding: 0.8rem;
+    width: 268px;
+    border-radius: 8px;
+    // margin-bottom: 4.8rem;
+  }
+  img {
+    @include margin-y(2.4rem);
+  }
+}
 .quote {
   padding-top: 4.8rem;
   &__header {
