--- a/src/pages/_Pages.scss
+++ b/src/pages/_Pages.scss
@@ -283,6 +283,9 @@
     &__header {
       flex-direction: row;
       margin-bottom: 3.2rem;
+      p {
+        font-size: 1.2rem;
+      }
     }
     &__meet-us-wrapper {
       @include flex(row, space-between, center);
