--- a/src/styles/_starter.scss
+++ b/src/styles/_starter.scss
@@ -1,15 +1,12 @@
-/* Global Styles */
 * {
   color: inherit;
   margin: 0;
 }
+
 html {
   font-size: 62.5%;
-  background-color: #111111;
   box-sizing: border-box;
-}
-body {
-  font-family: "Work Sans", sans-serif;
+  background-color: $c-body;
 }
 
 h1,
@@ -17,23 +14,16 @@ h2,
 h3,
 h4,
 h5,
-h6 {
-  font-family: "Work Sans", sans-serif;
-  color: $c-text;
-}
-
+h6,
 p {
   color: $c-text;
-  font-family: "Merriweather", sans-serif;
 }
 
 ul {
-  padding: 0;
   list-style-type: none;
 }
 
 li {
-  font-size: 2.4rem;
   color: $c-text;
   transition: all 0.3s ease-in-out;
   &:hover {
@@ -50,19 +40,4 @@ hr {
 }
 img {
   max-width: 100%;
-}
-
-button {
-  font-size: 2.4rem;
-  padding: 0.4rem 1.2rem;
-  font-weight: 600;
-  line-height: normal;
-  border-radius: 8px;
-}
-
-blockquote {
-  font-style: italic;
-  font-weight: 600;
-  letter-spacing: -0.12rem;
-  padding-bottom: 2.4rem;
 }
