--- a/src/styles/pixelinsight.config.scss
+++ b/src/styles/pixelinsight.config.scss
@@ -34,6 +34,9 @@ $g-accent: linear-gradient(91deg, #28233b 0%, #150f2f 100%);
 // ! Insert any other styles or variables that may be in figma here
 $header-gradient: linear-gradient(91deg, #28233b 0%, #150f2f 100%);
 
+// ! Box-shadow
+$box-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.2);
+
 // * Font Mixins
 // ? See Design system table in Figma for reference
 
