--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -113,6 +113,12 @@
   left: $left;
 }
 
+@mixin fixed-top-left($top, $left) {
+  position: fixed;
+  top: $top;
+  left: $left;
+}
+
 @mixin position-top-right($top: 0, $right: 0) {
   position: absolute;
   top: $top;
