--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,8 @@
 @import "shared/_ContactForm.scss";
 @import "shared/_GetAQuote.scss";
 @import "shared/_Footer.scss";
+@import "shared/_Backdrop.scss";
+@import "shared/_SideNavigation.scss";
 
 @import "components/home/_Hero.scss";
 @import "components/home/_WhatWeDo.scss";
