--- a/src/components/home/_WhatWeDoCards.scss
+++ b/src/components/home/_WhatWeDoCards.scss
@@ -1,7 +1,6 @@
 .what-we-do-cards {
   @include flex(column, center, center);
-  margin-top: 3.6rem;
-  text-align: center;
+  @include body-2();
 
   &__grid {
     display: grid;
@@ -12,35 +11,35 @@
   }
 
   &__card {
-    @include flex(column, space-between, center);
-    @include size(262px, 369px);
-    background-color: #28233b;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    padding: 1.6rem;
+    @include flex(column, center, center);
+    @include size(288px, 200px);
     border-radius: 1.6rem;
 
     h2 {
-      font-size: 2.4rem;
-      letter-spacing: -0.192rem;
-      padding: 1.6rem 0 2.4rem 0;
+      @include brand-2();
     }
     p {
-      font-size: 1.2rem;
-      padding-bottom: 2.4rem;
+      padding: 1.6rem;
     }
   }
   .odd {
-    background: linear-gradient(154deg, #ef913c 2.17%, #6d0fa6 98.68%);
+    border: 3px solid $c-primary;
+    box-shadow: 0px 4px 10px 0px $c-primary;
   }
 }
 
 @include media-breakpoint-up(md) {
   .what-we-do-cards {
+    &__card {
+      @include size(288px, 288px);
+      border: 3px solid $c-secondary;
+      box-shadow: 0px 4px 10px 0px $c-secondary;
+    }
     &__grid {
       grid-template-columns: repeat(2, 1fr);
-      row-gap: 4.8rem;
-      column-gap: 4.8rem;
-      padding: 0 5.8rem;
+      row-gap: 3.2rem;
+      column-gap: 3.2rem;
+      padding: 3.2rem;
     }
     .design {
       order: 1;
@@ -53,14 +52,14 @@
 @include media-breakpoint-up(lg) {
   .what-we-do-cards {
     &__card {
-      width: 350px;
+      @include size(350px, 350px);
     }
   }
 }
 @include media-breakpoint-up(xl) {
   .what-we-do-cards {
     &__card {
-      width: 450px;
+      //width: 450px;
     }
   }
 }
