--- a/src/styles/_project.scss
+++ b/src/styles/_project.scss
@@ -8,3 +8,15 @@
   box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(8px);
 }
+
+@mixin glass-card {
+  border-radius: 1.6rem;
+  border: 1px solid rgba($c-text, 0.15);
+  background: linear-gradient(
+    282deg,
+    rgba(0, 0, 0, 0.17) 1.07%,
+    rgba(0, 0, 0, 0.5) 101.17%
+  );
+  box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(8px);
+}
