--- a/src/components/home/_WhatWeDoCards.scss
+++ b/src/components/home/_WhatWeDoCards.scss
@@ -30,6 +30,7 @@
 
 @include media-breakpoint-up(md) {
   .what-we-do-cards {
+    @include body-1();
     &__card {
       @include size(288px, 288px);
       border: 3px solid $c-secondary;
