--- a/src/components/home/_Hero.scss
+++ b/src/components/home/_Hero.scss
@@ -91,6 +91,7 @@
       width: 800px;
       padding: 2.4rem;
       gap: 3.2rem;
+      margin-top: 96px;
     }
     &__hero-img {
       display: block;
