--- a/src/components/home/_ScrollAnimationWhyChoose.scss
+++ b/src/components/home/_ScrollAnimationWhyChoose.scss
@@ -38,3 +38,8 @@
     transform: translateX(-50%);
   }
 }
+@include media-breakpoint-up(lg) {
+  .scroll-animation-why-choose {
+    margin-top: 6rem;
+  }
+}
