--- a/src/components/home/_Scrollbar.scss
+++ b/src/components/home/_Scrollbar.scss
@@ -12,6 +12,9 @@
     border: 1px solid #6b6767;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   }
+  .lg {
+    display: none;
+  }
   .hex {
     @include size(24px, 24px);
     padding-bottom: 4px;
@@ -26,7 +29,15 @@
 }
 @include media-breakpoint-up(md) {
   .scrollbar {
-    left: 52%;
+    left: 50%;
     transform: translateX(-50%);
+  }
+}
+@include media-breakpoint-up(lg) {
+  .scrollbar {
+    top: 175%;
+    .lg {
+      display: block;
+    }
   }
 }
