--- a/src/components/home/_WhyChoosePixel.scss
+++ b/src/components/home/_WhyChoosePixel.scss
@@ -1,10 +1,10 @@
 .why-choose-pixel {
   @include flex(column, center, center);
-
+  .lg {
+    display: none;
+  }
   &__title {
-    font-size: 3.2rem;
-    font-weight: 600;
-    letter-spacing: -0.18rem;
+    @include brand-1();
     max-width: 224px;
     margin: 0 auto;
     padding-bottom: 1.6rem;
@@ -15,19 +15,24 @@
     &--header {
       @include flex(row, space-around, center);
       border-radius: 8px;
-      background-color: #28233b;
+      background: linear-gradient(91deg, #28233b 0%, #150f2f 100%);
+      border: 1px solid rgba($c-text, 0.1);
+
       img {
         padding: 0.8rem;
       }
     }
     &--title {
-      font-size: 2rem;
-      letter-spacing: -0.115rem;
-      font-weight: 400;
+      @include brand-2();
     }
     p {
       @include padding-y(1.6rem);
+      @include body-2();
     }
+  }
+
+  .reverse {
+    background: linear-gradient(271deg, #28233b 0%, #150f2f 100%);
   }
 }
 
@@ -53,6 +58,16 @@
       .right {
         align-self: flex-end;
       }
+    }
+  }
+}
+@include media-breakpoint-up(lg) {
+  .why-choose-pixel {
+    .lg {
+      display: block;
+    }
+    p {
+      @include body-1();
     }
   }
 }
