--- a/src/shared/_GetAQuote.scss
+++ b/src/shared/_GetAQuote.scss
@@ -10,13 +10,11 @@
   p {
     max-width: 230px;
     padding-top: 1.6rem;
-    font-size: 1.6rem;
-    padding-bottom: 2rem;
-    text-align: center;
+    @include body-1();
+    margin-bottom: 2.4rem;
   }
   button {
-    border: none;
-    @include button(#f2446e);
+    @include cta-button();
     margin-bottom: 4.8rem;
   }
 }
