--- a/src/styles/_project.scss
+++ b/src/styles/_project.scss
@@ -20,3 +20,13 @@
   box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(8px);
 }
+
+@mixin cta-button {
+  @include brand-2();
+  background-color: $c-secondary;
+  color: $c-text;
+  padding: 0.8rem 3.2rem;
+  border-radius: 0.8rem;
+  border: none;
+  box-shadow: $box-shadow;
+}
