all but glass background

--- a/src/pages/_Pages.scss
+++ b/src/pages/_Pages.scss
@@ -80,34 +80,49 @@
 }
 
 .contact {
-  padding-top: 4.2rem;
-  &__top-wrapper {
-    @include flex(row, center, center);
-    margin-bottom: 3.2rem;
+  @include flex(column, center, center);
+  &__header-background {
+    background-image: url("/assets/images/contact_background.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100vw;
+  }
+  &__header {
+    margin: auto;
+    margin-top: 8rem;
+    width: 285px;
+    @include flex(column, center, center);
+    border-radius: 1.2rem;
+    border: 1px solid var(--glass-stroke, #fff);
+    /* Glass/Blur */
+    box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(8px);
     h1 {
-      font-size: 2.4rem;
-      padding-top: 3.2rem;
-      max-width: 200px;
-      text-align: center;
-      margin-right: 0.8rem;
+      @include brand-1();
+      padding: 1.6rem 0;
+    }
+    h2 {
+      @include brand-3();
+      width: 260px;
     }
     img {
       @include size(68px, 68px);
     }
   }
-  &__phone-desktop {
-    display: none;
+
+  &__social-media {
+    width: 205px;
+    @include flex(row, space-between, center);
+    padding: 1.6rem 0;
+    img {
+      @include size(24px, 24px);
+    }
   }
 
   &__text {
-    font-size: 1.6rem;
-    line-height: 2.4rem;
-    margin-bottom: 3.2rem;
-    max-width: 286px;
-    text-align: center;
-    margin: auto;
-    padding-top: 4.8rem;
-    margin-bottom: 6rem;
+    @include body-2();
+    max-width: 232px;
+    margin-top: 4.8rem;
   }
 }
 
@@ -238,7 +253,14 @@
     @include margin-x(1.6rem);
   }
 }
-
+// @include media-breakpoint-up(sm) {
+//   .contact {
+//     input,
+//     text-area {
+//       width: 400px;
+//     }
+//   }
+// }
 @include media-breakpoint-up(md) {
   .home {
     .sub-hero-divider {
@@ -305,18 +327,14 @@
   }
 
   .contact {
-    &__top-wrapper {
-      h1 {
-        font-size: 3.2rem;
-        font-weight: 600;
-        letter-spacing: -0.256rem;
-        max-width: 350px;
-      }
+    &__header {
+      width: 320px;
     }
-
-    input,
-    textarea {
-      max-width: 300px;
+    form {
+      input,
+      textarea {
+        width: 600px;
+      }
     }
     &__phone-mobile {
       display: none;
@@ -332,6 +350,7 @@
     }
     &__text {
       max-width: 520px;
+      @include body-1();
     }
   }
 }
