--- a/src/shared/_ContactForm.scss
+++ b/src/shared/_ContactForm.scss
@@ -15,7 +15,7 @@
     input,
     textarea {
       margin-bottom: 2rem;
-      background-color: #111111;
+      background-color: #0f0713;
       border: none;
       border-bottom: 1px solid #f5f5f5;
       width: 280px;
