--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,7 @@
 
 // ? single page styles for all pages go here: pages rarely have their own styles and are usually just a collection of components
 @import "pages/_Pages.scss";
+@import "pages/_About.scss";
 
 @import "shared/_Header.scss";
 @import "shared/_ContactForm.scss";
